[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
dashmap = "6.0.1"
indexmap = { version = "2.4.0", features = ["serde"] }
matchit = "0.7"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
typed-builder = "0.20.0"
rquickjs = { version = "0.6.2", features = ["full"] }
tower = "0.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dino-macros = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
