[package]
name = "dino"
version = "0.1.0"
edition = "2021"
authors = ["hedon"]

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
clap = { version = "4.5.16", features = ["derive"] }
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
enum_dispatch = "0.3.13"
git2 = { version = "0.19.0", default-features = false }
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
